# FedQuery

./: .env.example  .gitignore  CLAUDE.md  README.md  benchmark_analsys.md  demo.ipynb  full_evaluation.md  optimization_efforts.md  pyproject.toml
.specify/memory/: constitution.md
config/: .env.example  settings.py
data/eval/: golden_qa.json
specs/001-fomc-rag/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-fomc-rag/contracts/: agent-workflow.md  (+1 more)
src/agent/: graph.py  mcp_client.py  nodes.py  state.py
src/cli/: __main__.py  ask.py  benchmark.py  evaluate.py  ingest.py  main.py
src/embedding/: provider.py  sentence_transformer.py
src/evaluation/: __init__.py  chunking_eval.py  eval_runner.py  retrieval_metrics.py
src/ingestion/: chunker.py  cleaner.py  pipeline.py  scraper.py  text_writer.py
src/llm/: config.py
src/mcp_server/: __main__.py  server.py
src/models/: benchmark.py  chunk.py  citation.py  document.py  enums.py  evaluation.py  query.py
src/retrieval/: __init__.py  reranker.py
src/vectorstore/: benchmark.py  chroma_store.py  faiss_benchmark.py
tests/contract/: test_mcp_get_doc.py  test_mcp_search.py
tests/integration/: test_ingestion.py  test_mcp_roundtrip.py  test_qa_flow.py
tests/unit/: test_benchmark.py  test_chunker.py  test_chunking_eval.py  test_citation_flow.py  test_confidence.py  test_dedup.py  test_eval_runner.py  test_metadata_hints.py  test_reranker.py  test_resolve_string_ranges.py  test_retrieval_metrics.py  test_scraper.py  test_text_writer.py  test_two_pass_retrieval.py
